Updated analysis questions in Tests.ipynb and modified execution counts; replaced binary database file DW_FastAndSafe.db.

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "id": "fa5d58b3-9957-41e8-8630-15794a913963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preguntas de análisis de negocio:\n",
+    "# 1. En qué meses del año los clientes solicitan más servicios de mensajería\n",
+    "# 2. Cuáles son los días donde más solicitudes hay\n",
+    "# 3. A qué hora los mensajeros están más ocupados\n",
+    "# 4. Número de servicios solicitados por cliente y por mes\n",
+    "# 5. Mensajeros más eficientes (Los que más servicios prestan)\n",
+    "# 6. Cuáles son las sedes que más servicios solicitan por cada cliente\n",
+    "# 7. Cuál es el tiempo promedio de entrega desde que se solicita el servicio hasta que se cierra el caso\n",
+    "# 8. Mostrar los tiempos de espera por cada fase del servicio: Iniciado, Con mensajero asignado, recogido en origen, Entregado en Destino, Cerrado.\n",
+    "# En que fase del servicio hay más demoras?\n",
+    "# 9. Cuáles son las novedades que más se presentan durante la prestación del servicio?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "99f24689-ba20-46ff-a1a4-257a667be640",
    "metadata": {},
    "outputs": [
@@ -59,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b2c9ee67-f9f6-4767-83cc-2aeeaa5bcee8",
    "metadata": {},
    "outputs": [
@@ -545,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "01a69a9a-c9f4-4ac6-8060-4e5e61cc5a1b",
    "metadata": {},
    "outputs": [
@@ -673,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "51a9b8a9-d493-4297-b562-82813d738688",
    "metadata": {},
    "outputs": [
@@ -729,18 +749,6 @@
     "    plt.show()\n",
     "else:\n",
     "    print(\"No se encontraron novedades para graficar.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c3aba99-1c7c-4f28-96ca-af47dd60e8fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Cierre de Conexión ---\n",
-    "conn.close()\n",
-    "print(\"\\n--- ANÁLISIS COMPLETADO ---\")\n"
    ]
   }
  ],
